@@ -27,6 +27,7 @@ INSTALLER
 
 TICKETS
 	Fixed #1095: Bug - IP usage interface is broken
+	Fixed #1099: Bug - SQL users which belong to an account which is being deleted are not removed from mysql table
 
 ------------------------------------------------------------------------------------------------------------------------
 1.1.11
